--- a/Week1/Assignment2/mediaqueries.css
+++ b/Week1/Assignment2/mediaqueries.css
@@ -1,8 +1,9 @@
-@media screen and (min-width: 800px) and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .grid-container {
-    max-width: 100%;
+    margin: 0 auto;
   }
 }
+
 @media screen and (min-width: 500px) and (max-width: 800px) {
   #desktop-nav {
     display: none;
