--- a/Week1/Assignment2/style.css
+++ b/Week1/Assignment2/style.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 #wrapper {
-  width: 1200px;
   max-width: 100%;
   margin: 0 auto;
 }
@@ -50,10 +50,11 @@ nav {
 }
 
 .grid-container {
+  max-width: 1200px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
-  margin: 0 40px;
+  margin: 0 20px 20px;
 }
 
 .grid-item {
