--- a/Week1/Assignment3/style.css
+++ b/Week1/Assignment3/style.css
@@ -1,9 +1,16 @@
 /* styles.css */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+h2,
+p {
+  margin: 0;
+  width: 100%;
 }
 
 header {
@@ -16,11 +23,14 @@ header {
   z-index: 1000;
 }
 
+/*nav*/
+
 .navbar {
+  max-height: 48px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 2rem;
+  padding: 0 2rem;
 }
 
 .logo {
@@ -29,14 +39,14 @@ header {
 }
 
 .logo img {
-  height: 30px;
+  height: 60px;
   margin-right: 10px;
 }
 
 .logo a {
-  color: rgba(1, 3, 14, 0.62); /* 設置 "for Developers" 的顏色 */
-  font-size: 20px; /* 設置 "for Developers" 的字體大小 */
-  text-decoration: none; /* 去掉下劃線 */
+  color: rgba(1, 3, 14, 0.62);
+  font-size: 16px;
+  text-decoration: none;
 }
 
 .nav-links {
@@ -51,8 +61,9 @@ header {
 }
 
 .nav-links a {
+  font-size: 14px;
   text-decoration: none;
-  color: black;
+  color: rgb(95, 99, 104);
 }
 
 .nav-right {
@@ -60,20 +71,19 @@ header {
   align-items: center;
 }
 
-.search-bar {
-  position: relative;
-  margin-right: 10px;
-}
+/*Search*/
 
 .search-bar input {
   padding: 0.5rem;
-  height: 36px; /* 設置輸入框的高度 */
+  height: 18px;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding-left: 40px; /* 給圖標留出空間 */
+  padding-left: 40px;
+  background-color: rgba(241, 243, 244);
 }
 
 .search-icon {
+  height: 25px;
   position: absolute;
   top: 50%;
   left: 10px;
@@ -82,22 +92,31 @@ header {
   font-size: 20px;
 }
 
+/*語言選取*/
+.search-bar {
+  position: relative;
+  margin-right: 10px;
+}
+
 .language-selector {
   position: relative;
   display: inline-block;
 }
 
 .dropbtn {
+  border-radius: 4px;
   background-color: white;
-  color: black;
+  color: rgb(95, 99, 104);
   border: 1px solid #ddd;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 13px;
   height: 36px;
-  padding: 0 12px; /* 調整內邊距 */
+  padding: 0 12px;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-left: 40px;
+  margin-right: 10px;
 }
 
 .dropdown-content {
@@ -105,13 +124,14 @@ header {
   position: absolute;
   background-color: white;
   min-width: 160px;
-  max-height: 200px;
+  max-height: fit-content;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
+  font-size: 12px;
+  color: rgb(95, 99, 104);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -121,20 +141,186 @@ header {
   background-color: #f1f1f1;
 }
 
+.dropbtn-icon {
+  height: 25px;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  color: #888;
+  font-size: 20px;
+}
+
 .show {
   display: block;
 }
 
+/*左側小icon*/
+
+.three-dot-btn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #d3d3d3;
+  padding: 0.4rem;
+  margin: 0 10px;
+}
+
+.dot {
+  width: 3px;
+  height: 3px;
+  background-color: #333;
+  border-radius: 50%;
+  margin: 2px 0;
+}
+
 .profile-icon {
-  background-color: #34a853;
+  background-color: #29887b;
   color: white;
   border-radius: 50%;
   padding: 0.5rem;
   text-align: center;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+/* Blue Banner*/
+.banner {
+  height: 63px;
+  margin-top: 48px;
+  background-color: rgb(26, 115, 232);
+  display: flex; /* 使用flexbox */
+  align-items: center; /* 垂直居中 */
+  justify-content: center;
+}
+
+.banner-message {
+  color: white;
+}
+
+/*滑動頁面*/
+
+.diversite-landing-row {
+  background: url(https://developers.google.com/homepage-assets/images/io-promo-l4.png)
+    no-repeat top 40% right 15px / 50% auto #eeeeee;
+  display: flex;
+  align-items: center;
+  height: calc(100vh - 111px);
+  z-index: 1000;
+  width: 100%;
+  max-width: 100%;
+}
+
+.devsite-landing-row-html {
+  width: 100%;
+  padding: 50px;
+  align-items: center;
+}
+
+.dgc-hero-fullscreen-item h2 {
+  font-size: 72px;
+  line-height: 1.2;
+  margin-bottom: 20px;
+}
+
+.watch-button {
+  display: inline-block;
+  text-align: center;
+  color: white;
+  margin: 10px 0;
+  background-color: rgb(26, 115, 232);
+  width: 172px;
+  margin-top: 20px;
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+/*sticky頁面*/
+
+.row-bottom {
+  background-color: rgb(241, 243, 244);
+  bottom: 0;
+  position: sticky;
+  z-index: -1;
+}
+
+.devsite-recommended-content-header {
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.row-bottom-wrapper {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+/*Carousel*/
+
+/*上方標語*/
+
+.info-icon {
+  cursor: pointer;
+  display: inline-block;
+  border: 1px solid #000;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  text-align: center;
+  line-height: 16px;
+}
+
+.tooltip-text {
+  display: inline-block;
+  width: fit-content;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px 10px;
+  visibility: hidden;
+}
+
+.carousel {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-width: 100%;
+  white-space: nowrap;
+  gap: 10px;
+}
+
+.carousel-item {
+  flex: 0 0 auto;
+  width: fit-content;
+  padding: 10px;
+  background-color: #f0f0f0;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.scroll-button {
+  position: absolute;
+  transform: translateY(-50%);
+  left: 95%;
+  top: 73%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
